--- a/view/adminhtml/templates/system/config/testconnection.phtml
+++ b/view/adminhtml/templates/system/config/testconnection.phtml
@@ -2,7 +2,7 @@
 <button class="scalable" type="button" id="<?= /* @noEscape */ $block->getHtmlId() ?>" data-mage-init='{"freshMailTestConnection":{
     "url": "<?= $block->escapeUrl($block->getAjaxUrl()) ?>",
     "elementId": "<?= /* @noEscape */ $block->getHtmlId() ?>",
-    "successText": "<?= $block->escapeHtmlAttr(__('Successful!')) ?>",
+    "successText": "<?= $block->escapeHtmlAttr(__('Connection Successful!')) ?>",
     "failedText": "<?= $block->escapeHtmlAttr(__('Connection failed!')) ?>",
     "fieldMapping": "<?= /* @noEscape */ $block->getFieldMapping() ?>"}, "validation": {}}'>
     <span id="<?= /* @noEscape */ $block->getHtmlId() ?>_result"><?= $block->escapeHtml($block->getButtonLabel()) ?></span>
